# ats2-timsort

./: .dir-locals.el  .hgignore  AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  aminclude_static.am  ats2-timsort-c.am  ats2-timsort-c.pc.in  ats2-timsort.h  ats2-timsort.pc.in  autogen.sh  common-macros.m4.in  configure  configure.ac  list-ats-dependencies.dats.in  silent-rules.mk  timsort-for-c-memory.dats  timsort-for-c-memory.h  timsort-for-c-memory.include.c  timsort-for-c-out-of-place.dats  timsort-for-c-to-array.dats  timsort-for-c-to-new-array.dats  timsort-macros.m4.in  typed-timsort-for-c.dats.m4
m4/: stm_config_makefiles.m4  stm_prog_gnu_make.m4
tests/: test-array_timsort.dats  test-clz.dats  test-galloping.dats  test-int_timsort.c  test-list_timsort-derivatives.dats  test-list_timsort.dats  test-list_vt_insertion_sort.dats  test-list_vt_timsort-derivatives.dats  test-list_vt_timsort.dats  test-merge_two_nondecreasing_runs.dats  test-merges.dats  test-minrun.dats  test-nodepower.dats  test-provide_a_nondecreasing_run.dats  test-splits-after-run.dats  test-timing-array_timsort.dats  test-timsort-c.c.m4  test-timsort_r_to_array.c  test-timsort_r_to_pointers.c  test-timsort_to_array-big-records.c  test-timsort_to_array.c  test-timsort_to_new_array.c  test-timsort_to_pointers.c
timsort/CATS/: bptr.cats  timsort.cats
timsort/DATS/: array-timsort.dats  bptr.dats  list-timsort.dats  typed-timsort-for-c.dats.in
timsort/DATS/COMMON/: timsort-common.dats
timsort/HATS/: array-timsort.hats  array-timsort_dats.hats  list-timsort.hats  list-timsort_dats.hats
timsort/SATS/: array-timsort.sats  bptr.sats  list-timsort.sats
timsort/SATS/COMMON/: timsort-common.sats
